--- a/noticia.html
+++ b/noticia.html
@@ -2,4 +2,5 @@
 <h2 id="autor"></h2>
 <img id="imagem">
 <p id="conteudo"></p>
+<a id="LerMais">Ler Mais</a>
 <script src="./js/noticia.js"></script>
